--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://jotunmichael.github.io/michailmarkou/">
+<meta property="og:url" content="https://michailmarkou1995.github.io/michailmarkou/">
 <meta property="og:title" content="Michail Markou portfolio">
 <meta property="og:description" content="Reverse Engineer, Game Developer-artist making tutorials.">
-<meta property="og:image" content="https://jotunmichael.github.io//michailmarkou//assets//img//archviz.jpg">
+<meta property="og:image" content="https://michailmarkou1995.github.io//michailmarkou//assets//img//archviz.jpg">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://jotunmichael.github.io/michailmarkou/">
+<meta property="twitter:url" content="https://michailmarkou1995.github.io/michailmarkou/">
 <meta property="twitter:title" content="Michail Markou portfolio">
 <meta property="twitter:description" content="Reverse Engineer, Game Developer-artist making tutorials.">
-<meta property="twitter:image" content="https://jotunmichael.github.io//michailmarkou//assets//img//archviz.jpg">
+<meta property="twitter:image" content="https://michailmarkou1995.github.io//michailmarkou//assets//img//archviz.jpg">
 <script type="application/ld+json">
   {
     "@context": "https://schema.org/",
     "@type": "Person",
     "name": "Michail Markou",
-    "url": "https://jotunmichael.github.io/michailmarkou",
+    "url": "https://michailmarkou1995.github.io/michailmarkou",
     "image": "https://scontent.fskg1-2.fna.fbcdn.net/v/t1.0-9/67603228_2838097346205647_8572879676299542528_o.jpg?_nc_cat=106&_nc_sid=174925&_nc_ohc=IadRgoGuMG0AX9prwxB&_nc_ht=scontent.fskg1-2.fna&oh=0fc41eea7e458bb1bc37b312ea612fd5&oe=5F70B16E",
     "sameAs": [
       "https://www.facebook.com/Jotun.Michael",
@@ -47,7 +47,7 @@
       "https://www.youtube.com/user/NitrousUp",
       "https://www.linkedin.com/in/michail-markou-27393b168/",
       "https://gr.pinterest.com/mixailblackace",
-      "https://github.com/JotunMichael",
+      "https://github.com/michailmarkou1995",
       "https://michailkalinx.blogspot.com/"
     ]  
   }
@@ -66,7 +66,7 @@
 <!--<script src="assets/js/modernizr-2.7.1.js"></script>-->
 <link rel="shortcut icon" href="assets/img/favicon-static.ico" type="image/x-icon">
 <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
-<link rel="canonical" href="https://jotunmichael.github.io/michailmarkou/" />
+<link rel="canonical" href="https://michailmarkou1995.github.io/michailmarkou/" />
 </head>
 
 <body>
@@ -112,7 +112,7 @@
       <div class="hero-tile w-dyn-list">
         <div class="w-dyn-items">
           <div class="w-dyn-item">
-            <a class="tile-link w-inline-block" href="https://github.com/JotunMichael">
+            <a class="tile-link w-inline-block" href="https://github.com/michailmarkou1995">
               <div class="tile-text">Latest<br>Projects</div>
               <div class="tile-image" style="background-image: url('assets/img/568f0d9760473ef56670a32d_coffee-mug.jpg');">
                 <div class="tile-overlay">
@@ -148,10 +148,10 @@
         <a class="social-block w-inline-block" href="https://www.linkedin.com/in/michail-markou-27393b168/">
 
         </a>
-        <a class="artstation social-block w-inline-block" href="https://www.artstation.com/michaeljotun">
+        <a class="artstation social-block w-inline-block" href="https://www.artstation.com/michailmarkou1995">
 
         </a>
-        <a class="github social-block w-inline-block" href="https://github.com/JotunMichael">
+        <a class="github social-block w-inline-block" href="https://github.com/michailmarkou1995">
 
         </a>
         <a class="youtube social-block w-inline-block" href="https://www.youtube.com/user/NitrousUp">
