--- a/blog.html
+++ b/blog.html
@@ -21,23 +21,23 @@
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://jotunmichael.github.io/michailmarkou/">
+<meta property="og:url" content="https://michailmarkou1995.github.io/michailmarkou/">
 <meta property="og:title" content="Information about my projects.">
 <meta property="og:description" content="See Latest posts and projects.">
-<meta property="og:image" content="https://jotunmichael.github.io//michailmarkou//assets//img//archviz.jpg">
+<meta property="og:image" content="https://michailmarkou1995.github.io//michailmarkou//assets//img//archviz.jpg">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://jotunmichael.github.io/michailmarkou/">
+<meta property="twitter:url" content="https://michailmarkou1995.github.io/michailmarkou/">
 <meta property="twitter:title" content="Information about my projects.">
 <meta property="twitter:description" content="See Latest posts and projects.">
-<meta property="twitter:image" content="https://jotunmichael.github.io//michailmarkou//assets//img//archviz.jpg">
+<meta property="twitter:image" content="https://michailmarkou1995.github.io//michailmarkou//assets//img//archviz.jpg">
 <script type="application/ld+json">
   {
     "@context": "https://schema.org/",
     "@type": "Person",
     "name": "Michail Markou",
-    "url": "https://jotunmichael.github.io/michailmarkou",
+    "url": "https://michailmarkou1995.github.io/michailmarkou",
     "image": "https://scontent.fskg1-2.fna.fbcdn.net/v/t1.0-9/67603228_2838097346205647_8572879676299542528_o.jpg?_nc_cat=106&_nc_sid=174925&_nc_ohc=IadRgoGuMG0AX9prwxB&_nc_ht=scontent.fskg1-2.fna&oh=0fc41eea7e458bb1bc37b312ea612fd5&oe=5F70B16E",
     "sameAs": [
       "https://www.facebook.com/Jotun.Michael",
@@ -51,7 +51,7 @@
   }
   </script>
 
-  <link rel="canonical" href="https://jotunmichael.github.io/michailmarkou/blog.html" />
+  <link rel="canonical" href="https://michailmarkou1995.github.io/michailmarkou/blog.html" />
   <link rel='dns-prefetch' href='//ajax.googleapis.com' />
   <link href="assets/css/style.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
@@ -99,7 +99,7 @@
       <div class="w-dyn-list">
         <div class="w-dyn-items w-row">
           <div class="blog-block m-col m-col-4 w-dyn-item">
-            <a class="blog-link project-link w-inline-block" data-ix="blog-link" href="https://github.com/JotunMichael">
+            <a class="blog-link project-link w-inline-block" data-ix="blog-link" href="https://github.com/michailmarkou1995">
               <div class="blog-image-wrapper">
                 <div class="blog-date">2020</div>
                 <div class="blog-category" style="background-color: #8e54cc;">Coding</div>
@@ -117,7 +117,7 @@
 </a>
 </div>
 <div class="blog-block m-col m-col-4 w-dyn-item">
-  <a class="blog-link project-link w-inline-block" data-ix="blog-link" href="https://www.artstation.com/michaeljotun">
+  <a class="blog-link project-link w-inline-block" data-ix="blog-link" href="https://www.artstation.com/michailmarkou1995">
   <div class="blog-image-wrapper">
     <div class="blog-date">2020</div>
     <div class="blog-category" style="background-color: #4294d5;">ART</div>
