--- a/about.html
+++ b/about.html
@@ -23,25 +23,25 @@
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://jotunmichael.github.io/michailmarkou/">
+<meta property="og:url" content="https://michailmarkou1995.github.io/michailmarkou/">
 <meta property="og:title" content="Life story summary.">
 <meta property="og:description" content="About me take away.">
-<meta property="og:image" content="https://jotunmichael.github.io//michailmarkou//assets//img//archviz.jpg">
+<meta property="og:image" content="https://michailmarkou1995.github.io//michailmarkou//assets//img//archviz.jpg">
 
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://jotunmichael.github.io/michailmarkou/">
+<meta property="twitter:url" content="https://michailmarkou1995.github.io/michailmarkou/">
 <meta property="twitter:title" content="Life story summary.">
 <meta property="twitter:description" content="About me take away.">
-<meta property="twitter:image" content="https://jotunmichael.github.io//michailmarkou//assets//img//archviz.jpg">
+<meta property="twitter:image" content="https://michailmarkou1995.github.io//michailmarkou//assets//img//archviz.jpg">
 
 <script type="application/ld+json">
   {
     "@context": "https://schema.org/",
     "@type": "Person",
     "name": "Michail Markou",
-    "url": "https://jotunmichael.github.io/michailmarkou",
+    "url": "https://michailmarkou1995.github.io/michailmarkou",
     "image": "https://scontent.fskg1-2.fna.fbcdn.net/v/t1.0-9/67603228_2838097346205647_8572879676299542528_o.jpg?_nc_cat=106&_nc_sid=174925&_nc_ohc=IadRgoGuMG0AX9prwxB&_nc_ht=scontent.fskg1-2.fna&oh=0fc41eea7e458bb1bc37b312ea612fd5&oe=5F70B16E",
     "sameAs": [
       "https://www.facebook.com/Jotun.Michael",
@@ -49,14 +49,14 @@
       "https://www.youtube.com/user/NitrousUp",
       "https://www.linkedin.com/in/michail-markou-27393b168/",
       "https://gr.pinterest.com/mixailblackace",
-      "https://github.com/JotunMichael",
+      "https://github.com/michailmarkou1995",
       "https://michailkalinx.blogspot.com/"
     ]  
   }
   </script>
 
   <link href="assets/css/style.css" rel="stylesheet" type="text/css">
-  <link rel="canonical" href="https://jotunmichael.github.io/michailmarkou/about.html" />
+  <link rel="canonical" href="https://michailmarkou1995.github.io/michailmarkou/about.html" />
   <link rel='dns-prefetch' href='//ajax.googleapis.com' />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
@@ -119,7 +119,7 @@
       <p>Well from the above quote i mean share it even if you are not expert because if you waiting for that day actually it will never come because there is the <strong>Impostor Sydrome</strong> yeah sounds funny but it is actually real I've been learning stuff since my 12th year of old but till today i feel ...</p><blockquote>"I know that I know nothing." Socrates
         <img src="assets/img/jon_snow.gif" alt="Game Of Thrones Quote" width="268" height="180">
       </blockquote>
-      <p>and no it's not because i am humble. <a href="https://jotunmichael.github.io/michailmarkou/">Check</a> out my social media and follow me for latest catches!.</p>&nbsp;
+      <p>and no it's not because i am humble. <a href="https://michailmarkou1995.github.io/michailmarkou/">Check</a> out my social media and follow me for latest catches!.</p>&nbsp;
       <p>Confused yet? that's how life is… it’s amazing!</p>
     </div>
   </div>
