--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <title>Michail Markou portfolio about coding, game dev tips</title>
 <meta charset="utf-8">
 <meta name="title" content="Michail Markou portfolio about coding, game development tips and tricks">
-<meta name="description" content="Reverse Engineer, Game Developer-artist making tutorials. A Quick look of my projects, goals, story. Subscribe to my youtube don't miss the latest tutorials.">
+<meta name="description" content="Software/Reverse Engineer | Game Developer - Designer - 3D Art | Sound Designer | Producer. A Quick look of my projects, goals, story. Subscribe to my youtube don't miss the latest tutorials.">
 <meta content="width=device-width, initial-scale=1" name="viewport">
 <meta name="robots" content="index, follow">
 <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
@@ -25,14 +25,14 @@
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://michailmarkou1995.github.io/michailmarkou/">
 <meta property="og:title" content="Michail Markou portfolio">
-<meta property="og:description" content="Reverse Engineer, Game Developer-artist making tutorials.">
+<meta property="og:description" content="Software/Reverse Engineer | Game Developer - Designer - 3D Art | Sound Designer | Producer.">
 <meta property="og:image" content="https://michailmarkou1995.github.io//michailmarkou//assets//img//archviz.jpg">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://michailmarkou1995.github.io/michailmarkou/">
 <meta property="twitter:title" content="Michail Markou portfolio">
-<meta property="twitter:description" content="Reverse Engineer, Game Developer-artist making tutorials.">
+<meta property="twitter:description" content="Software/Reverse Engineer | Game Developer - Designer - 3D Art | Sound Designer | Producer.">
 <meta property="twitter:image" content="https://michailmarkou1995.github.io//michailmarkou//assets//img//archviz.jpg">
 <script type="application/ld+json">
   {
@@ -40,7 +40,7 @@
     "@type": "Person",
     "name": "Michail Markou",
     "url": "https://michailmarkou1995.github.io/michailmarkou",
-    "image": "https://scontent.fskg1-2.fna.fbcdn.net/v/t1.0-9/67603228_2838097346205647_8572879676299542528_o.jpg?_nc_cat=106&_nc_sid=174925&_nc_ohc=IadRgoGuMG0AX9prwxB&_nc_ht=scontent.fskg1-2.fna&oh=0fc41eea7e458bb1bc37b312ea612fd5&oe=5F70B16E",
+    "image": "https://scontent.fskg1-2.fna.fbcdn.net/v/t1.6435-9/67603228_2838097346205647_8572879676299542528_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=174925&_nc_ohc=SbxbIDLcXdgAX_Pg96V&_nc_ht=scontent.fskg1-2.fna&oh=00_AT_ZB7QhOwyFj9aASXmY9GVcjsC95qELFsUXnfvkbz01JQ&oe=61DEB610",
     "sameAs": [
       "https://www.facebook.com/Jotun.Michael",
       "https://www.instagram.com/marcus.jotun",
