--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
 <meta name="google-site-verification" content="8Nv0wSV6jr7RX5hVcfCaH19UKGA5Jxc69UfpQniMvHk" />
 
 <!-- Open Graph / Facebook -->
-<meta property="og:type" content="website">
+<meta property="og:type" content="portfolio website">
 <meta property="og:url" content="https://michailmarkou1995.github.io/michailmarkou/">
 <meta property="og:title" content="Michail Markou portfolio">
 <meta property="og:description" content="Software/Reverse Engineer | Game Developer - Designer - 3D Art | Sound Designer | Producer.">
 <meta property="og:image" content="https://michailmarkou1995.github.io//michailmarkou//assets//img//archviz.jpg">
+<meta property="og:image:alt" content="image loading...">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
