--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <meta property="og:url" content="https://michailmarkou1995.github.io/michailmarkou/">
 <meta property="og:title" content="Michail Markou portfolio">
 <meta property="og:description" content="Software/Reverse Engineer | Game Developer - Designer - 3D Art | Sound Designer | Producer.">
-<meta property="og:image" content="https://michailmarkou1995.github.io/michailmarkou/assets/img/archviz.jpg">
+<meta property="og:image:url" content="https://michailmarkou1995.github.io/michailmarkou/assets/img/archviz.jpg">
 <meta property="og:image:secure_url" content="https://michailmarkou1995.github.io/michailmarkou/assets/img/archviz.jpg" /> 
 <meta property="og:image:type" content="image/jpeg" /> 
 <meta property="og:image:width" content="400" /> 
