--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <title>Michail Markou portfolio about coding, game dev tips</title>
 <meta charset="utf-8">
 <meta name="title" content="Michail Markou portfolio about coding, game development tips and tricks">
-<meta name="description" content="Software/Reverse Engineer | Game Developer - Designer - 3D Art | Sound Designer | Producer. A Quick look of my projects, goals, story. Subscribe to my youtube don't miss the latest tutorials.">
+<meta name="description" content="Software/Reverse Engineer | Game Developer - Designer - 3D Art | Sound Designer | Producer | Former Internet Service Provider Network Engineer. A Quick look of my projects, goals, story. Subscribe to my youtube don't miss the latest tutorials.">
 <meta content="width=device-width, initial-scale=1" name="viewport">
 <meta name="robots" content="index, follow">
 <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
@@ -25,7 +25,7 @@
 <meta property="og:type" content="portfolio website">
 <meta property="og:url" content="https://michailmarkou1995.github.io/michailmarkou/">
 <meta property="og:title" content="Michail Markou portfolio">
-<meta property="og:description" content="Software/Reverse Engineer | Game Developer - Designer - 3D Art | Sound Designer | Producer.">
+<meta property="og:description" content="Software/Reverse Engineer | Game Developer - Designer - 3D Art | Sound Designer | Producer | Former Internet Service Provider Network Engineer.">
 <meta property="og:image:url" content="https://michailmarkou1995.github.io/michailmarkou/assets/img/archviz.jpg">
 <meta property="og:image:secure_url" content="https://michailmarkou1995.github.io/michailmarkou/assets/img/archviz.jpg" /> 
 <meta property="og:image:type" content="image/jpeg" /> 
@@ -37,7 +37,7 @@
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://michailmarkou1995.github.io/michailmarkou/">
 <meta property="twitter:title" content="Michail Markou portfolio">
-<meta property="twitter:description" content="Software/Reverse Engineer | Game Developer - Designer - 3D Art | Sound Designer | Producer.">
+<meta property="twitter:description" content="Software/Reverse Engineer | Game Developer - Designer - 3D Art | Sound Designer | Producer | Former Internet Service Provider Network Engineer.">
 <meta property="twitter:image" content="https://michailmarkou1995.github.io//michailmarkou//assets//img//archviz.jpg">
 <script type="application/ld+json">
   {
