--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
       <div class="hero-tile w-dyn-list">
         <div class="w-dyn-items">
           <div class="w-dyn-item">
-            <a class="tile-link w-inline-block" href="https://github.com/michailmarkou1995">
-              <div class="tile-text">Latest<br>Projects</div>
+            <a class="tile-link w-inline-block" href="https://www.artstation.com/blogs/michailmarkou1995/PXDa/published-products-articles">
+              <div class="tile-text">Released<br>Products</div>
               <div class="tile-image" style="background-image: url('assets/img/568f0d9760473ef56670a32d_coffee-mug.jpg');">
                 <div class="tile-overlay">
 
